version/0.20/_sources/api/solver/_autosummary/settings/radiation_1.rst.txt
:orphan:

.. _radiation_1:

radiation
=========

.. autoclass:: ansys.fluent.core.solver.settings_241.radiation_1.radiation
    :show-inheritance:

.. rubric:: Attributes

==============================================================================================================   ======================================================

Attribute                                                                                                                                                       Summary

==============================================================================================================   ======================================================
:ref:`radiation_bc <radiation_bc>`                                                                                                                   Radiation BC Type.

:ref:`radial_direction <radial_direction>`                                                                                                    'radial_direction' child.

:ref:`theta_width_of_beam <theta_width_of_beam>`                                                                                                   Theta Width of Beam.

:ref:`phi_width_of_beam <phi_width_of_beam>`                                                                                                         Phi Width of Beam.

:ref:`direct_irradiation <direct_irradiation>`                                                                                                      Direct Irradiation.

:ref:`diffuse_irradiation <diffuse_irradiation>`                                                                                                   Diffuse Irradiation.

:ref:`parallel_collimated_beam <parallel_collimated_beam>`                                                                            'parallel_collimated_beam' child.

:ref:`use_beeam_direction_from_solar_load_model_settings <use_beeam_direction_from_solar_load_model_settings>`       Use Beam Direction from Solar Load Model Settings.

:ref:`use_irradiation_from_solar_soad_model_settings <use_irradiation_from_solar_soad_model_settings>`                  Use Irradiation from Solar Load Model Settings.

:ref:`external_black_body_temperature_method <external_black_body_temperature_method>`                                          External Black Body Temperature Method.

:ref:`black_body_temperature <black_body_temperature>`                                                                                          Black Body Temperature.

:ref:`internal_emissivity <internal_emissivity>`                                                                                                   Internal Emissivity.

:ref:`participates_in_solar_ray_tracing <participates_in_solar_ray_tracing>`                                                         Participates in Solar Ray Tracing.

:ref:`solar_transmissivity_factor <solar_transmissivity_factor>`                                                                           Solar Transmissivity Factor.

:ref:`radiating_s2s_surface <radiating_s2s_surface>`                                                                          Participates in View Factor Calculation?.

==============================================================================================================   ======================================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                   'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_3>`                                   'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                   'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_14>`                                  'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`       'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_19>`                                  'child_object_type' of phase.

====================================================   ===========================================

