version/0.23/_sources/api/solver/_autosummary/settings/radiation_1.rst.txt
:orphan:

.. _radiation_1:

radiation
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.radiation_1.radiation
    :show-inheritance:

.. rubric:: Attributes

==============================================================================================================   =======================================================================

Attribute                                                                                                                                                                        Summary

==============================================================================================================   =======================================================================
:ref:`radiation_bc <radiation_bc>`                                                                                                                                    Radiation BC Type.

:ref:`radial_direction <radial_direction>`                                                                                                              Set radial direction components.

:ref:`theta_width_of_beam <theta_width_of_beam>`                                                                                                                    Theta Width of Beam.

:ref:`phi_width_of_beam <phi_width_of_beam>`                                                                                                                          Phi Width of Beam.

:ref:`direct_irradiation <direct_irradiation>`                                                                                         Settings for direct irradiation on this boundary.

:ref:`diffuse_irradiation <diffuse_irradiation>`                                                                                      Settings for diffuse irradiation on this boundary.

:ref:`parallel_collimated_beam <parallel_collimated_beam>`                                                           Specify whether direct irradiation is applied parallel to the beam.

:ref:`use_beeam_direction_from_solar_load_model_settings <use_beeam_direction_from_solar_load_model_settings>`                        Use Beam Direction from Solar Load Model Settings.

:ref:`use_irradiation_from_solar_soad_model_settings <use_irradiation_from_solar_soad_model_settings>`                                   Use Irradiation from Solar Load Model Settings.

:ref:`external_black_body_temperature_method <external_black_body_temperature_method>`                                                    Select External Black Body Temperature Method.

:ref:`black_body_temperature <black_body_temperature>`                                                                                                   Specify Black Body Temperature.

:ref:`internal_emissivity <internal_emissivity>`                                                                                                            Specify Internal Emissivity.

:ref:`participates_in_solar_ray_tracing <participates_in_solar_ray_tracing>`                                                 Select whether to participates in Solar Ray Tracing or not.

:ref:`solar_transmissivity_factor <solar_transmissivity_factor>`                                                                                    Specify Solar Transmissivity Factor.

:ref:`participates_in_view_factor_calculation <participates_in_view_factor_calculation>`                                                       Participates in View Factor Calculation?.

==============================================================================================================   =======================================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                      'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_4>`                                      'child_object_type' of phase.

:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`          'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_11>`                                     'child_object_type' of phase.

:ref:`mass_flow_outlet_child <mass_flow_outlet_child>`       'child_object_type' of mass_flow_outlet.

:ref:`phase_child <phase_child_12>`                                     'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                      'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_16>`                                     'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`          'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_22>`                                     'child_object_type' of phase.

:ref:`phase_child <phase_child_33>`                                     'child_object_type' of phase.

:ref:`phase_child <phase_child_39>`                                     'child_object_type' of phase.

:ref:`phase_child <phase_child_40>`                                     'child_object_type' of phase.

:ref:`phase_child <phase_child_44>`                                     'child_object_type' of phase.

:ref:`phase_child <phase_child_49>`                                     'child_object_type' of phase.

======================================================   ============================================

